<resources>
    <string name="app_name">BarePlayer</string>
    <string name="play_random_songs">Play random songs</string>
    <string name="play_random_albumes">Play random albumes</string>
    <!-- Jumps to the previous song -->
    <string name="previous_song">Previous song</string>
    <!-- Jumps to the next song -->
    <string name="next_song">Next song</string>
    <!-- Pauses a song -->
    <string name="pause_song">Pause</string>
    <!-- Continues playing a song after being paused -->
    <string name="play_song">Play</string>
    <!-- Stops playing songs and returns to the main activity -->
    <string name="stop_songs">Stop</string>
    <!-- Jumps to the previous album -->
    <string name="previous_album">Previous album</string>
    <!-- Jumps to the next album -->
    <string name="next_album">Next album</string>
    <!-- Help button -->
    <string name="help">Help</string>
    <!-- Defines the music storage path -->
    <string name="helpText">BarePlayer is a simple-to-use music player. It allows to play all your music randomly, or grouped in albumes.\n\n

An album is made of all the music files that are in the same folder. Thus you can put each album in a separate folder and play the music in them in order, but each album be choosen randomly. Files in a subfolder are considered in a different album than in the parent folder.\n\n

You can add an empty file/folder called \"random\" or \"random.txt\" to a folder, in which case the music in that album will be played in random order when playing in \"random albumes\" mode. This is useful for folders of the \"Awesome mix\" kind.\n\n

You can also add an empty file/folder called \"norandom\" or \"norandom.txt\", in which case the music in that album will be played in order when playing in \"random songs\" mode. This is useful for songs that must be player always in order, like the \"Tubular bells\" albumes.\n\n

Music must be stored at %1$s.</string>

    <!-- Help button -->
    <string name="errorNoMusicTitle">No music found</string>

    <!-- Defines the music storage path -->
    <string name="errorNoMusic">No music found in the device. Please, add music files in the folder \"%1$s\".</string>

    <!-- Config text for menu -->
    <string name="setmusicpath">Set music path</string>

    <!-- Go to the external storage folder -->
    <string name="root">Root</string>
    <!-- Go to the internal storage folder -->
    <string name="internalStorage">Internal</string>
    <!-- Go to the music  folder -->
    <string name="musicFolder">Music</string>
</resources>
